GPT Model Added

--- a/Trials/embedding.ipynb
+++ b/Trials/embedding.ipynb
@@ -448,6 +448,37 @@
    "source": [
     "input_embeddings.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "c94ad793",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "x = torch.tensor([1, 2, 3])\n",
+    "x[-1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e56f65a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
